// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add default count metric when metrics is empty array 1`] = `
<Fragment>
  <div
    className="mapMapLayerPanel__metrics"
  >
    <div
      className="mapMetricEditorPanel__metricEditor"
      key="0"
    >
      <MetricEditor
        fields={Array []}
        isJoin={false}
        metric={
          Object {
            "type": "count",
          }
        }
        onChange={[Function]}
        onRemove={[Function]}
        showRemoveButton={false}
      />
    </div>
  </div>
  <EuiSpacer
    size="xs"
  />
  <EuiTextAlign
    textAlign="center"
  >
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      onClick={[Function]}
      size="xs"
    >
      <MemoizedFormattedMessage
        defaultMessage="Add metric"
        id="xpack.maps.metricsEditor.addMetricButtonLabel"
      />
    </EuiButtonEmpty>
  </EuiTextAlign>
</Fragment>
`;

exports[`should render metrics editor 1`] = `
<Fragment>
  <div
    className="mapMapLayerPanel__metrics"
  >
    <div
      className="mapMetricEditorPanel__metricEditor"
      key="0"
    >
      <MetricEditor
        fields={Array []}
        isJoin={false}
        metric={
          Object {
            "field": "myField",
            "type": "sum",
          }
        }
        onChange={[Function]}
        onRemove={[Function]}
        showRemoveButton={false}
      />
    </div>
  </div>
  <EuiSpacer
    size="xs"
  />
  <EuiTextAlign
    textAlign="center"
  >
    <EuiButtonEmpty
      iconType="plusInCircleFilled"
      onClick={[Function]}
      size="xs"
    >
      <MemoizedFormattedMessage
        defaultMessage="Add metric"
        id="xpack.maps.metricsEditor.addMetricButtonLabel"
      />
    </EuiButtonEmpty>
  </EuiTextAlign>
</Fragment>
`;
